objects/Territory_Assignment_Rule__c.object
<CustomObject><fields>
        <fullName>Account_Name_Criteria__c</fullName>
        <label>Account Name Criteria</label>
        <summaryFilterItems>
            <field>Territory_Rule_Criteria__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Name</value>
        </summaryFilterItems>
        <summaryForeignKey>Territory_Rule_Criteria__c.Territory_Assignment_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Activation_Date__c</fullName>
        <description>Store the activation date of the rule.</description>
        <label>Activation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>City_Criteria__c</fullName>
        <label>City Criteria</label>
        <summaryFilterItems>
            <field>Territory_Rule_Criteria__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account City</value>
        </summaryFilterItems>
        <summaryForeignKey>Territory_Rule_Criteria__c.Territory_Assignment_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Country_Code_Criteria__c</fullName>
        <label>Country Code Criteria</label>
        <summaryFilterItems>
            <field>Territory_Rule_Criteria__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Country Code</value>
        </summaryFilterItems>
        <summaryForeignKey>Territory_Rule_Criteria__c.Territory_Assignment_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <description>Store the description of the territory assignment rule.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Store the Expiration Date of the territory assignment rule.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Object__c</fullName>
        <defaultValue>"Account"</defaultValue>
        <description>Contain the Object Name.</description>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Postal_Code_Criteria__c</fullName>
        <label>Postal Code Criteria</label>
        <summaryFilterItems>
            <field>Territory_Rule_Criteria__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Postal Code</value>
        </summaryFilterItems>
        <summaryForeignKey>Territory_Rule_Criteria__c.Territory_Assignment_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Rule_Criteria_Types_Used__c</fullName>
        <formula>IF( City_Criteria__c &gt; 0, 'City; ','')
+IF( Account_Name_Criteria__c &gt; 0, 'Account Name; ','')
+IF( Country_Code_Criteria__c &gt; 0, 'Country; ','')
+IF( Postal_Code_Criteria__c &gt; 0, 'Postal Code; ','')
+IF( Sector_Criteria__c  &gt; 0, 'Sector; ','')
+IF( State_Code_Criteria__c &gt; 0, 'State Code;','')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Criteria Types Used</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sector_Criteria__c</fullName>
        <label>Sector Criteria</label>
        <summaryFilterItems>
            <field>Territory_Rule_Criteria__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Sector</value>
        </summaryFilterItems>
        <summaryForeignKey>Territory_Rule_Criteria__c.Territory_Assignment_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>State_Code_Criteria__c</fullName>
        <label>State Code Criteria</label>
        <summaryFilterItems>
            <field>Territory_Rule_Criteria__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account State Code</value>
        </summaryFilterItems>
        <summaryForeignKey>Territory_Rule_Criteria__c.Territory_Assignment_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Store the territory object record id associated to the territory assignment rule.</description>
        <label>Territory</label>
        <referenceTo>Territory_Shadow__c</referenceTo>
        <relationshipLabel>Territory Assignment Rules</relationshipLabel>
        <relationshipName>Territory_Assignment_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>The Object act as an header for the related assignment rule criteria object.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Territory Assignment Rule</label><nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Territory Assignment Rules</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activation_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Account_Name_Criteria__c</columns>
        <columns>Territory__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>